# ftlite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  task.md
.github/workflows/: ci.yml  publish.yml
docs/: detailed_guide.md  index.md
examples/: benchmark.py  customer_churn.py  fraud_detection.py  house_price_prediction.py  recommendation_system.py  time_series_forecasting.py
examples/churn_example/: __init__.py  churn_labels.parquet  customer_activities.parquet  customer_profiles.parquet  generate_data.py  run_churn_store.py
examples/churn_example/.ftlite/: online_store.db  registry.json
ftlite/: __init__.py  cli.py  client.py  feature.py  ingestion.py  offline_store.py  online_store.py  registry.py
ftlite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_client.py
